# psi-projekt

./: .gitignore  README.md  pyproject.toml  report.md  requirements-dev.txt  requirements.txt  setup.cfg
examples/: main.py  more_advanced_car.py  simplest_car.py
src/psi_environment/: environment.py  main.py
src/psi_environment/api/: environment_api.py
src/psi_environment/data/: action.py  car.py  map.py  map_state.py  point.py  stop_mode.py
src/psi_environment/game/: game.py
src/psi_environment/game/resources/: point.ase  sample_map.txt  sample_map1.txt
src/psi_environment/resources/: sample_map1.txt
tests/: EnvTests.py  TrafficTest.py  agent_test.py  test_points.py  test_traffic.py
