[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "psi-environment"
dynamic = ["dependencies", "optional-dependencies"]
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"psi_environment.game.resources" = ["*.png", "*.txt"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = ["requirements-dev.txt"] }

[tool.black]
line-length = 88
